# embedded-infra-lib

./: .clang-format  .clangd  .gitattributes  .gitignore  .gitlab-ci.yml  .ls-lint.yml  .mega-linter.yml  .release-please-manifest.json  .secretlintignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  NOTICE  README.md  antora-playbook-branch.yml  antora-playbook-site.yml  copilot-instructions.md  release-please-config.json  sonar-project.properties
application/echo_console/: CMakeLists.txt  Console.cpp  Console.hpp  Main.cpp
application/protoc_echo_plugin/: CMakeLists.txt  CppFormatter.cpp  CppFormatter.hpp  EchoObjects.cpp  Main.cpp  ProtoCEchoPlugin.cpp  ProtoCEchoPlugin.hpp
application/protoc_echo_plugin_csharp/: CMakeLists.txt  Main.cpp  ProtoCEchoPluginCSharp.cpp
application/protoc_echo_plugin_java/: CMakeLists.txt  Main.cpp  ProtoCEchoPluginJava.cpp
application/security_key_generator/: CMakeLists.txt  Main.cpp
application/sesame_key_generator/: CMakeLists.txt
drivers/external_flash/: CMakeLists.txt  FlashQuadSpiCypressFll.cpp  FlashQuadSpiCypressFll.hpp  FlashQuadSpiMicronN25q.cpp  FlashQuadSpiMicronN25q.hpp
drivers/motor_controller/: CMakeLists.txt  DirectPwmStepperMotorDrv8711Decorator.cpp  DirectPwmStepperMotorDrv8711Decorator.hpp  StepDirStepperMotorDrv8711Decorator.cpp  StepDirStepperMotorDrv8711Decorator.hpp  StepperMotorControllerDrv8711.cpp  StepperMotorControllerDrv8711.hpp
services/: CMakeLists.txt
services/ble/: Att.hpp  BondBlobPersistence.cpp  BondBlobPersistence.hpp  BondStorageSynchronizer.cpp  BondStorageSynchronizer.hpp  CMakeLists.txt  ClaimingGattClientAdapter.cpp  ClaimingGattClientAdapter.hpp  Dtm.proto  Gap.cpp  Gap.hpp  Gap.proto  Gatt.cpp  Gatt.hpp  Gatt.proto  GattClient.cpp  GattClient.hpp  GattServer.cpp  GattServer.hpp  GattServerCharacteristicImpl.cpp  GattServerCharacteristicImpl.hpp  RetryGattClientCharacteristicsOperations.cpp  RetryGattClientCharacteristicsOperations.hpp
services/crypto/: Aes.hpp  AesCmac.cpp  AesCmac.hpp  AesMbedTls.cpp  AesMbedTls.hpp  CMakeLists.txt  EllipticCurve.hpp  EllipticCurveDiffieHellman.cpp  EllipticCurveDiffieHellman.hpp  KeyGenerator.cpp  KeyGenerator.hpp  MbedTlsRandomDataGeneratorWrapper.cpp  MbedTlsRandomDataGeneratorWrapper.hpp  Secp256r1.cpp  Secp256r1.hpp  Sha256.hpp  Sha256MbedTls.cpp  Sha256MbedTls.hpp
services/echo/: CMakeLists.txt  EchoInstantiation.cpp  EchoInstantiation.hpp  EchoInstantiationSecured.cpp  EchoInstantiationSecured.hpp  EchoOnMessageCommunication.cpp  EchoOnMessageCommunication.hpp  EchoOnSesame.cpp  EchoOnSesame.hpp  EchoPolicyDiffieHellman.cpp  EchoPolicyDiffieHellman.hpp  EchoPolicySymmetricKey.cpp  EchoPolicySymmetricKey.hpp  TracingEchoOnSesame.hpp
services/echo_attributes/: CMakeLists.txt  EchoAttributes.proto
services/echo_console/: CMakeLists.txt  Console.cpp  Console.hpp  Main.cpp
services/echo_core/: CMakeLists.txt  Echo.cpp  Echo.hpp  EchoErrorPolicy.cpp  EchoErrorPolicy.hpp  EchoOnStreams.cpp  EchoOnStreams.hpp  Proto.hpp  ProtoMessageReceiver.cpp  ProtoMessageReceiver.hpp  ProtoMessageSender.cpp  ProtoMessageSender.hpp  Serialization.cpp  Serialization.hpp  ServiceForwarder.cpp  ServiceForwarder.hpp  TracingEcho.cpp  TracingEcho.hpp
services/echo_instantiations/: CMakeLists.txt  EchoInstantiationOnNetwork.cpp  EchoInstantiationOnNetwork.hpp
services/flash/: CMakeLists.txt  FlashAlign.cpp  FlashAlign.hpp  FlashDelegate.hpp  FlashMultipleAccess.cpp  FlashMultipleAccess.hpp  FlashQuadSpi.cpp  FlashQuadSpi.hpp  FlashQuadSpiCypressFll.cpp  FlashQuadSpiCypressFll.hpp  FlashQuadSpiMicronN25q.cpp  FlashQuadSpiMicronN25q.hpp  FlashQuadSpiSingleSpeed.cpp  FlashQuadSpiSingleSpeed.hpp  FlashRegion.cpp  FlashRegion.hpp  FlashSpi.cpp  FlashSpi.hpp
services/message_communication/: CMakeLists.txt  MessageCommunication.hpp  MessageCommunicationCobs.cpp  MessageCommunicationCobs.hpp  MessageCommunicationWindowed.cpp  MessageCommunicationWindowed.hpp
services/network/: Address.cpp  Address.hpp  BonjourServer.cpp  BonjourServer.hpp  CMakeLists.txt  CertificateConvertor.cpp  CertificateConvertor.hpp  CertificatesMbedTls.cpp  Connection.cpp  Connection.hpp  ConnectionFactoryWithNameResolver.cpp  ConnectionFactoryWithNameResolver.hpp  ConnectionMbedTls.cpp  ConnectionMbedTls.hpp  Datagram.hpp  Dns.cpp  DnsResolver.cpp  DnsResolver.hpp  DnsServer.cpp  DnsServer.hpp  EchoOnConnection.cpp  EchoOnConnection.hpp  ExclusiveConnection.cpp  ExclusiveConnection.hpp  ExclusiveStartingConnection.cpp  ExclusiveStartingConnection.hpp  Http.cpp  Http.hpp  HttpClient.hpp  HttpClientAuthentication.cpp  HttpClientAuthentication.hpp  HttpClientBasic.cpp  HttpClientBasic.hpp  HttpClientCachedConnection.cpp  HttpClientCachedConnection.hpp  HttpClientImpl.cpp  HttpClientImpl.hpp  HttpClientJson.cpp  HttpClientJson.hpp  HttpErrors.cpp  (+55 more)
services/network_instantiations/: CMakeLists.txt  ConnectionBsd.cpp  ConnectionBsd.hpp  ConnectionWin.cpp  ConnectionWin.hpp  DatagramBsd.cpp  DatagramBsd.hpp  DatagramWin.cpp  DatagramWin.hpp  EchoInstantiation.cpp  EchoInstantiation.hpp  EventDispatcherWithNetworkBsd.cpp  EventDispatcherWithNetworkBsd.hpp  EventDispatcherWithNetworkWin.cpp  EventDispatcherWithNetworkWin.hpp  NameLookup.cpp  NameLookup.hpp  NetworkAdapter.cpp  NetworkAdapter.hpp
services/peripheral/: CMakeLists.txt  DebouncedButton.cpp  DebouncedButton.hpp  DebugLed.cpp  DebugLed.hpp  GpioPinInverted.cpp  GpioPinInverted.hpp  I2cMultipleAccess.cpp  I2cMultipleAccess.hpp  LowPowerSerialCommunication.cpp  LowPowerSerialCommunication.hpp  LowPowerSpiMaster.cpp  LowPowerSpiMaster.hpp  RepeatingButton.cpp  RepeatingButton.hpp  SerialCommunicationLoopback.cpp  SerialCommunicationLoopback.hpp  SignalLed.cpp  SignalLed.hpp  SpiMasterWithChipSelect.cpp  SpiMasterWithChipSelect.hpp  SpiMultipleAccess.cpp  SpiMultipleAccess.hpp
services/sesame/: CMakeLists.txt  SesameCobs.cpp  SesameCobs.hpp  SesameCrypto.hpp  SesameCryptoMbedTls.cpp  SesameCryptoMbedTls.hpp  SesameSecured.cpp  SesameSecured.hpp  SesameSecurity.proto  SesameWindowed.cpp  SesameWindowed.hpp
(+1202 files in other folders)
