add_subdirectory(tracer)
add_subdirectory(crypto)
add_subdirectory(flash)
add_subdirectory(message_communication)
add_subdirectory(peripheral)
add_subdirectory(synchronous_flash)
add_subdirectory(synchronous_peripheral)
add_subdirectory(util)

if (EMIL_INCLUDE_ECHO)
    add_subdirectory(ble)
    add_subdirectory(sesame)
    add_subdirectory(echo)
    add_subdirectory(network)
    add_subdirectory(network_instantiations)
    add_subdirectory(cucumber)
    add_subdirectory(echo_console)
    add_subdirectory(sesame_key_generator)
endif()
